# pypopcat

./: .pdm.toml  README.md  pyproject.toml
src/: popcat.py
